# chk_log4j

./: Cargo.toml  README.md  vulnerable.sha256
src/: main.rs
